--- a/templates/cases/cases.html
+++ b/templates/cases/cases.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Главная страница{% endblock %}
+{% block title %}Кейсы{% endblock %}
 
 {% block main %}
 {% load static %}
 
-    <link rel="stylesheet" href="{% static 'css/main/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cases/cases.css' %}">
 
     {% if user.is_authenticated  %}
     
@@ -14,6 +14,6 @@
     {% endif %}
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <script src="{% static 'js/main/main.js' %}"></script>
+    <script src="{% static 'js/cases/cases.js' %}"></script>
 
 {% endblock %}
