Создание модели в БД, настройка БД. Создание динамичной маршрутизации URL. Вывод записей из БД.

--- a/templates/cases/cases.html
+++ b/templates/cases/cases.html
@@ -7,12 +7,42 @@
 
     <link rel="stylesheet" href="{% static 'css/cases/cases.css' %}">
 
-    {% if user.is_authenticated  %}
+    <!-- {% if user.is_authenticated  %}
     
     {% else %}
 
-    {% endif %}
+    {% endif %} -->
     
+   <div class="container bg-light">
+    <div class="row d-flex justify-content-center">
+
+        {% for obj in cases %}
+           
+            <a href='{% url "casePage" id=obj.id title=obj.title %}' class="col-4 p-1 mt-5" style="text-decoration:none;">
+                
+                <div class="card text-bg-dark" >
+                    <img src="/media/{{ obj.img }}" style="width: 100px; height: 100px;">
+                </div>
+
+                <div class="text-center" style="height: 15vh;">
+                    <h5 class="text-center" id="{{ obj.id }}" style="color: black;">{{ obj.title }}</h5>   
+                </div>
+
+                
+
+            </a>    
+         
+            <script>
+                var str = document.getElementById("{{ obj.id }}").innerHTML
+                document.getElementById("{{ obj.id }}").innerHTML=str.replaceAll('_', ' ');
+            </script>
+        {% endfor %}
+       
+    </div>
+</div>
+
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="{% static 'js/cases/cases.js' %}"></script>
 
