--- a/templates/cases/cases.html
+++ b/templates/cases/cases.html
@@ -7,39 +7,49 @@
 
     <link rel="stylesheet" href="{% static 'css/cases/cases.css' %}">
 
+    <div class="nav_bar">
+        <div class="nav_link"><a href="/">Главная</a></div>
+        <div class="nav_link"><a href="/blog">Блог</a></div>
+        <div class="nav_link"><a href="/cases">Кейсы</a></div>
+    </div>
     <!-- {% if user.is_authenticated  %}
     
     {% else %}
 
     {% endif %} -->
     
-   <div class="container bg-light">
-    <div class="row d-flex justify-content-center">
-
-        {% for obj in cases %}
-           
-            <a href='{% url "casePage" id=obj.id titleForURL=obj.titleForURL %}' class="col-4 p-1 mt-5" style="text-decoration:none;">
-                
-                <div class="card text-bg-dark" >
-                    <img src="/media/{{ obj.img }}" style="width: 100px; height: 100px;">
-                </div>
-
-                <div class="text-center" style="height: 15vh;">
-                    <h5 class="text-center" id="{{ obj.id }}" style="color: black;">{{ obj.title }}</h5>   
-                </div>
-
-                
-
-            </a>    
-         
-            <!-- <script>
-                var str = document.getElementById("{{ obj.id }}").innerHTML
-                document.getElementById("{{ obj.id }}").innerHTML=str.replaceAll('_', ' ');
-            </script> -->
-        {% endfor %}
-       
+    <div class="page_header">Кейсы</div>
+    <div class="page_links">
+        <a href="/">Главная страница</a>
+        <span class="page_arrow">=></span>
+        <a href="/cases">кейсы</a>
     </div>
-</div>
+
+    <div class="container bg-light">
+        <div class="row d-flex justify-content-center">
+
+            {% for obj in cases %}
+            
+                <a href='{% url "casePage" id=obj.id titleForURL=obj.titleForURL %}' class="col-4 p-1 mt-5" style="text-decoration:none;">
+                    
+                    <div class="card text-bg-dark" >
+                        <img src="/media/{{ obj.img }}" style="width: 100px; height: 100px;">
+                    </div>
+
+                    <div class="text-center" style="height: 15vh;">
+                        <h5 class="text-center" id="{{ obj.id }}" style="color: black;">{{ obj.title }}</h5>   
+                    </div>
+
+                </a>    
+            
+                <!-- <script>
+                    var str = document.getElementById("{{ obj.id }}").innerHTML
+                    document.getElementById("{{ obj.id }}").innerHTML=str.replaceAll('_', ' ');
+                </script> -->
+            {% endfor %}
+        
+        </div>
+    </div>
 
 
 
