--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -7,9 +7,66 @@
 
     <link rel="stylesheet" href="{% static 'css/main/main.css' %}">
 
+    <div class="nav_bar">
+        <div class="nav_link"><a href="/">Главная</a></div>
+        <div class="nav_link"><a href="/blog">Блог</a></div>
+        <div class="nav_link"><a href="/cases">Кейсы</a></div>
+    </div>
     {% if user.is_authenticated  %}
     
+    <div class="content">
+        <div class="header">
+            <div class="header_img">
+                <img src="../../media/nikitos.jpg" alt="" height="500px" style="border-radius: 250px;">
+            </div>
+            <div class="header_name">НИКИТОСИК</div>
+            <div class="header_text">SMM-специалист, копирайтер, контент-менеджер</div>
+            <div class="header_extra_text">Следует отметить, что реализация намеченных плановых заданий обеспечивает широкому кругу специалистов модели развития.</div>
+        </div>
+
+        <div class="about_me">
+            <div class="about_me_h">Обо мне</div>
+            <div class="about_me_text">Разнообразный и богатый опыт социально-экономическое развитие представляет собой интересный эксперимент прогресса профессионального общества. Для современного мира курс на социально-ориентированный национальный проект способствует повышению качества поэтапного и последовательного развития общества. Не вызывает сомнений, что курс на социально-ориентированный национальный проект позволяет выполнять важные задания по разработке укрепления демократической системы.</div>
+        </div>
+
+        <div class="contacts">
+            <div class="contacts_h">Контакты</div>
+            <div class="contacts_email">kvitkonickitka@gmail.com</div>
+            <div class="contacts_phone">+79995674812</div>
+            <div class="contacts_links">
+                <a href="t.me/NikitaKvitko"><img src="../../media/telegram.png" alt="" height="70px"></a>
+                <a href="https://vk.com/nikita_kvitko"><img src="../../media/vk.png" alt="" height="70px"></a>
+            </div>
+        </div>
+    </div>
+
     {% else %}
+
+    <div class="content">
+        <div class="header">
+            <div class="header_img">
+                <img src="../../media/nikitos.jpg" alt="" height="500px" style="border-radius: 250px;">
+            </div>
+            <div class="header_name">НИКИТОСИК</div>
+            <div class="header_text">SMM-специалист, копирайтер, контент-менеджер</div>
+            <div class="header_extra_text">Следует отметить, что реализация намеченных плановых заданий обеспечивает широкому кругу специалистов модели развития.</div>
+        </div>
+
+        <div class="about_me">
+            <div class="about_me_h">Обо мне</div>
+            <div class="about_me_text">Разнообразный и богатый опыт социально-экономическое развитие представляет собой интересный эксперимент прогресса профессионального общества. Для современного мира курс на социально-ориентированный национальный проект способствует повышению качества поэтапного и последовательного развития общества. Не вызывает сомнений, что курс на социально-ориентированный национальный проект позволяет выполнять важные задания по разработке укрепления демократической системы.</div>
+        </div>
+
+        <div class="contacts">
+            <div class="contacts_h">Контакты</div>
+            <div class="contacts_email">kvitkonickitka@gmail.com</div>
+            <div class="contacts_phone">+79995674812</div>
+            <div class="contacts_links">
+                <a href="t.me/NikitaKvitko"><img src="../../media/telegram.png" alt="" height="70px"></a>
+                <a href="https://vk.com/nikita_kvitko"><img src="../../media/vk.png" alt="" height="70px"></a>
+            </div>
+        </div>
+    </div>
 
     {% endif %}
     
