--- a/templates/cases/caseObject/caseObject.html
+++ b/templates/cases/caseObject/caseObject.html
@@ -7,8 +7,11 @@
 
     <link rel="stylesheet" href="{% static 'css/cases/cases.css' %}">
 
-    Хуй
-
+    <div class="nav_bar">
+        <div class="nav_link"><a href="/">Главная</a></div>
+        <div class="nav_link"><a href="/blog">Блог</a></div>
+        <div class="nav_link"><a href="/cases">Кейсы</a></div>
+    </div>
     <!-- {% if user.is_authenticated  %}
     
     {% else %}
