--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -11,6 +11,9 @@
         <div class="h-4"><a class="nav_link" href="/">Главная</a></div>
         <div class="h-4"><a class="nav_link" href="/blog">Блог</a></div>
         <div class="h-4"><a class="nav_link" href="/cases">Кейсы</a></div>
+        <div class="h-4"><a class="nav_link" href="/">Главная</a></div>
+        <div class="h-4"><a class="nav_link" href="/blog">Блог</a></div>
+        <div class="h-4"><a class="nav_link" href="/cases">Кейсы</a></div>
     </div>
     {% if user.is_authenticated  %}
     
