--- a/templates/cases/caseObject/caseObject.html
+++ b/templates/cases/caseObject/caseObject.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="{% static 'css/cases/cases.css' %}">
 
     <div class="nav_bar">
-        <div class="nav_link"><a href="/">Главная</a></div>
-        <div class="nav_link"><a href="/blog">Блог</a></div>
-        <div class="nav_link"><a href="/cases">Кейсы</a></div>
+        <div class="h-4"><a class="nav_link" href="/">Главная</a></div>
+        <div class="h-4"><a class="nav_link" href="/blog">Блог</a></div>
+        <div class="h-4"><a class="nav_link" href="/cases">Кейсы</a></div>
     </div>
     <!-- {% if user.is_authenticated  %}
     
