--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -8,34 +8,38 @@
     <link rel="stylesheet" href="{% static 'css/main/main.css' %}">
 
     <div class="nav_bar">
-        <div class="nav_link"><a href="/">Главная</a></div>
-        <div class="nav_link"><a href="/blog">Блог</a></div>
-        <div class="nav_link"><a href="/cases">Кейсы</a></div>
+        <div class="h-4"><a class="nav_link" href="/">Главная</a></div>
+        <div class="h-4"><a class="nav_link" href="/blog">Блог</a></div>
+        <div class="h-4"><a class="nav_link" href="/cases">Кейсы</a></div>
     </div>
     {% if user.is_authenticated  %}
     
     <div class="content">
         <div class="header">
             <div class="header_img">
-                <img src="../../media/nikitos.jpg" alt="" height="500px" style="border-radius: 250px;">
+                <img src="{% static 'img/nikitos.jpg' %}" alt="" height="500px" style="border-radius: 250px;">
             </div>
-            <div class="header_name">НИКИТОСИК</div>
-            <div class="header_text">SMM-специалист, копирайтер, контент-менеджер</div>
-            <div class="header_extra_text">Следует отметить, что реализация намеченных плановых заданий обеспечивает широкому кругу специалистов модели развития.</div>
+            <div class="h-1">НИКИТОСИК</div>
+            <div class="h-2 mb_60">SMM-специалист, копирайтер, контент-менеджер</div>
+            <div class="text_32">Следует отметить, что реализация намеченных плановых заданий обеспечивает широкому кругу специалистов модели развития.</div>
         </div>
 
         <div class="about_me">
-            <div class="about_me_h">Обо мне</div>
-            <div class="about_me_text">Разнообразный и богатый опыт социально-экономическое развитие представляет собой интересный эксперимент прогресса профессионального общества. Для современного мира курс на социально-ориентированный национальный проект способствует повышению качества поэтапного и последовательного развития общества. Не вызывает сомнений, что курс на социально-ориентированный национальный проект позволяет выполнять важные задания по разработке укрепления демократической системы.</div>
+            <div class="h-3">Обо мне</div>
+            <div class="text_32">Разнообразный и богатый опыт социально-экономическое развитие представляет собой интересный эксперимент прогресса профессионального общества. Для современного мира курс на социально-ориентированный национальный проект способствует повышению качества поэтапного и последовательного развития общества. Не вызывает сомнений, что курс на социально-ориентированный национальный проект позволяет выполнять важные задания по разработке укрепления демократической системы.</div>
         </div>
 
         <div class="contacts">
-            <div class="contacts_h">Контакты</div>
-            <div class="contacts_email">kvitkonickitka@gmail.com</div>
-            <div class="contacts_phone">+79995674812</div>
+            <div class="h-3">Контакты</div>
+            <div class="text_32">kvitkonickitka@gmail.com</div>
+            <div class="text_32">+79995674812</div>
             <div class="contacts_links">
-                <a href="t.me/NikitaKvitko"><img src="../../media/telegram.png" alt="" height="70px"></a>
-                <a href="https://vk.com/nikita_kvitko"><img src="../../media/vk.png" alt="" height="70px"></a>
+                <a href="https://t.me/NikitaKvitko" style="text-decoration: none;">
+                    <img src="{% static 'img/telegram.png' %}" alt="" height="70px">
+                </a>
+                <a href="https://vk.com/nikita_kvitko" style="text-decoration: none;">
+                    <img src="{% static 'img/vk.png' %}" alt="" height="70px">
+                </a>
             </div>
         </div>
     </div>
@@ -45,25 +49,29 @@
     <div class="content">
         <div class="header">
             <div class="header_img">
-                <img src="../../media/nikitos.jpg" alt="" height="500px" style="border-radius: 250px;">
+                <img src="{% static 'img/nikitos.jpg' %}" alt="" height="500px" style="border-radius: 250px;">
             </div>
-            <div class="header_name">НИКИТОСИК</div>
-            <div class="header_text">SMM-специалист, копирайтер, контент-менеджер</div>
-            <div class="header_extra_text">Следует отметить, что реализация намеченных плановых заданий обеспечивает широкому кругу специалистов модели развития.</div>
+            <div class="h-1">НИКИТОСИК</div>
+            <div class="h-2 mb_60">SMM-специалист, копирайтер, контент-менеджер</div>
+            <div class="text_32">Следует отметить, что реализация намеченных плановых заданий обеспечивает широкому кругу специалистов модели развития.</div>
         </div>
 
         <div class="about_me">
-            <div class="about_me_h">Обо мне</div>
-            <div class="about_me_text">Разнообразный и богатый опыт социально-экономическое развитие представляет собой интересный эксперимент прогресса профессионального общества. Для современного мира курс на социально-ориентированный национальный проект способствует повышению качества поэтапного и последовательного развития общества. Не вызывает сомнений, что курс на социально-ориентированный национальный проект позволяет выполнять важные задания по разработке укрепления демократической системы.</div>
+            <div class="h-3">Обо мне</div>
+            <div class="text_32">Разнообразный и богатый опыт социально-экономическое развитие представляет собой интересный эксперимент прогресса профессионального общества. Для современного мира курс на социально-ориентированный национальный проект способствует повышению качества поэтапного и последовательного развития общества. Не вызывает сомнений, что курс на социально-ориентированный национальный проект позволяет выполнять важные задания по разработке укрепления демократической системы.</div>
         </div>
 
         <div class="contacts">
-            <div class="contacts_h">Контакты</div>
-            <div class="contacts_email">kvitkonickitka@gmail.com</div>
-            <div class="contacts_phone">+79995674812</div>
+            <div class="h-3">Контакты</div>
+            <div class="text_32">kvitkonickitka@gmail.com</div>
+            <div class="text_32">+79995674812</div>
             <div class="contacts_links">
-                <a href="t.me/NikitaKvitko"><img src="../../media/telegram.png" alt="" height="70px"></a>
-                <a href="https://vk.com/nikita_kvitko"><img src="../../media/vk.png" alt="" height="70px"></a>
+                <a href="t.me/NikitaKvitko">
+                    <img src="{% static 'img/telegram.png' %}" alt="" height="70px">
+                </a>
+                <a href="https://vk.com/nikita_kvitko">
+                    <img src="{% static 'img/vk.png' %}" alt="" height="70px">
+                </a>
             </div>
         </div>
     </div>
