--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -66,10 +66,10 @@
             <div class="text_32">kvitkonickitka@gmail.com</div>
             <div class="text_32">+79995674812</div>
             <div class="contacts_links">
-                <a href="t.me/NikitaKvitko">
+                <a href="t.me/NikitaKvitko" style="text-decoration: none;">
                     <img src="{% static 'img/telegram.png' %}" alt="" height="70px">
                 </a>
-                <a href="https://vk.com/nikita_kvitko">
+                <a href="https://vk.com/nikita_kvitko" style="text-decoration: none;">
                     <img src="{% static 'img/vk.png' %}" alt="" height="70px">
                 </a>
             </div>
