--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -40,7 +40,7 @@ body {
 
 .h-2 {
     font-size: 64px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 92px;
     letter-spacing: 0em;
     margin-top: 20px;
@@ -49,7 +49,7 @@ body {
 
 .h-3 {
     font-size: 48px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 66px;
     letter-spacing: 0em;
     margin-top: 10px;
@@ -76,4 +76,32 @@ body {
 }
 .mb_60 {
     margin-bottom: 60px;
+}
+
+.page_header{
+    margin-bottom: 100px;
+}
+
+.page_links{
+    color: #B5B5B5;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 100px;
+}
+
+.page_links a{
+    color: #B5B5B5;
+    font-size: 16px;
+    font-weight: 400;
+    text-decoration: none;
+    padding: 3px;
+    padding-bottom: 1px;
+    padding-top: 1px;
+    border: 1px solid white;
+    border-radius: 4px;
+}
+
+.page_links a:hover{
+    border: 1px solid #B5B5B5;
+    transition: 0.2s;
 }
