--- a/static/css/main/main.css
+++ b/static/css/main/main.css
@@ -1,13 +1,24 @@
+.content {
+    width: 60%;
+}
+
 .nav_bar{
     position: absolute;
-    left: 85%;
+    left: 82%;
     top: 64%;
 }
 
 .nav_link{ 
     text-decoration: none;
     color: #222222;
+    padding: 10%;
 }
+
+.nav_link:hover{
+    padding-left: 30%;
+    transition: 0.3s;    
+}
+
 .header_img {
     margin-top: 50px;
     margin-bottom: 80px;
